--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ ol {
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
+  list-style-type: none;
 }
 
 img {
@@ -44,44 +45,29 @@ body {
 }
 
 .container {
-  max-width: 1158px;
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 15px;
+  min-width: 320px;
+  max-width: 428px;
+  padding-right: 16px;
+  padding-left: 16px;
+  margin: auto;
 }
 
-.header {
-  box-sizing: border-box;
-  border-bottom: 1px solid var(--accent);
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-}
-
-.list {
-  list-style: none;
+.container-head {
   display: flex;
-  gap: 24px;
 }
 
-.link {
-  text-decoration: none;
-  display: inline-block;
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
 }
 
-.header-nav {
-  color: var(--dark);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  padding: 24px 0;
-  position: relative;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.current {
-  color: #404bbf;
-  position: relative;
+@media screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    width: 100%;
+    padding: 0 15px;
+  }
 }
 
 .logo_header {
@@ -99,7 +85,90 @@ body {
   color: var(--dark);
 }
 
-.menu_header {
+.header-nav {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .header-nav {
+    display: flex;
+  }
+}
+
+.address-list {
+  display: none;
+}
+
+.header-burger {
+  border: none;
+  background: transparent;
+  margin-left: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .header-burger {
+    display: none;
+  }
+}
+
+.mobile-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 32px;
+  background-color: var(--main-color);
+  z-index: 999;
+
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+
+.mobile-container.is-open {
+  transform: translateX(0);
+}
+
+.header {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  box-sizing: border-box;
+  border-bottom: 1px solid var(--accent);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+/* .header {
+  box-sizing: border-box;
+  border-bottom: 1px solid var(--accent);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+} */
+
+/* .address-list {
+  display: flex;
+  gap: 40px;
+} */
+
+/* .list {
+  list-style: none;
+  display: flex;
+  gap: 24px;
+}
+
+.link {
+  text-decoration: none;
+  display: inline-block;
+} */
+
+/* 
+
+.current {
+  color: #404bbf;
+  position: relative;
+} */
+
+/* .menu_header {
   gap: 40px;
 }
 
@@ -109,9 +178,9 @@ body {
 
 .header-nav:focus {
   color: var(--pressed-state);
-}
+} */
 
-.current::after {
+/* .current::after {
   content: "";
   position: absolute;
   left: 0;
@@ -139,12 +208,9 @@ body {
   display: flex;
 }
 
-.address-list {
-  display: flex;
-  gap: 40px;
-}
+*/
 
-.header-address-link {
+/* .header-address-link {
   color: var(--text-color);
   font-size: 16px;
   line-height: 1.5;
@@ -161,8 +227,9 @@ body {
 .header-address-link:hover {
   color: var(--pressed-state);
 }
+*/
 
-.main {
+/* .main {
   background: var(--dark);
   padding: 188px 0;
   box-shadow: blur;
@@ -751,7 +818,7 @@ icon_advantages {
   margin-left: 16px;
   fill: #ffffff;
   padding: 24p;
-}
+} */
 
 .modal {
   padding: 72px 24px 24px 24px;
