--- a/css/styles.css
+++ b/css/styles.css
@@ -647,6 +647,13 @@ body {
   padding-right: 82px;
 }
 
+@media screen and (min-width: 1158px) {
+  .section-our_team {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+}
+
 .section_name-team {
   font-size: 36px;
   line-height: 1.11;
@@ -674,6 +681,15 @@ body {
   }
 }
 
+@media screen and (min-width: 1158px) {
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 24px;
+  }
+}
+
 .our_team_card {
   background: var(--main-color);
   border-radius: 0px 0px 4px 4px;
@@ -685,8 +701,6 @@ body {
 .our_team_soc {
   margin-top: 32px;
   margin-bottom: 32px;
-  margin-left: 16px;
-  margin-right: 16px;
 }
 
 @media screen and (min-width: 1158px) {
@@ -1013,6 +1027,7 @@ body {
   letter-spacing: 0.02em;
   color: var(--light);
   max-width: 264px;
+  padding-top: 16px;
   padding-bottom: 72px;
 }
 
@@ -1076,13 +1091,6 @@ body {
   flex-direction: column;
 }
 
-@media screen and (min-width: 768px) {
-  .footer-subscribe {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
 .footer-subscribe-p {
   padding-bottom: 16px;
   font-weight: 500;
@@ -1113,7 +1121,6 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-content: space-between;
   }
 }
 
@@ -1200,14 +1207,6 @@ body {
 
 .footer-bottom-icon {
   fill: #ffffff;
-}
-
-@media screen and (min-width: 1158px) {
-  .footer-bottom-icon {
-    margin-left: 16px;
-    fill: #ffffff;
-    padding: 24px;
-  }
 }
 
 /**
