--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,6 @@ body {
   max-width: 428px;
   padding-right: 16px;
   padding-left: 16px;
-  margin: auto;
 }
 
 @media screen and (min-width: 768px) {
@@ -124,22 +123,12 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  margin-right: 76px;
-  margin-right: 76px;
-  padding-top: 24px;
   display: block;
 }
 
 @media screen and (min-width: 768px) {
   .logo_header {
-    margin-right: 120px;
     padding-top: 0;
-  }
-}
-
-@media screen and (min-width: 1158px) {
-  .logo_header {
-    margin-right: 76px;
   }
 }
 
@@ -150,11 +139,26 @@ body {
 .list {
   list-style: none;
   display: flex;
-  gap: 24px;
 }
 
 .menu_header {
   gap: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .menu_header {
+    gap: 40px;
+    margin-left: 120px;
+    margin-right: 120px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .menu_header {
+    gap: 40px;
+    margin-right: 332px;
+    margin-left: 76px;
+  }
 }
 
 .header-nav {
@@ -165,6 +169,7 @@ body {
   .header-nav {
     display: flex;
     padding: 24px 0;
+    color: var(--navyblue, #2e2f42);
   }
 }
 
@@ -176,21 +181,29 @@ body {
   color: var(--pressed-state);
 }
 
-.current {
-  color: #404bbf;
-  position: relative;
+@media screen and (min-width: 768px) {
+  .current {
+    color: #404bbf;
+    position: relative;
+  }
 }
 
 .current::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  height: 4px;
   display: block;
-  width: 100%;
-  background-color: var(--pressed-state);
-  border-radius: 2px;
+}
+
+@media screen and (min-width: 768px) {
+  .current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    display: block;
+    width: 100%;
+    background-color: var(--pressed-state);
+    border-radius: 2px;
+  }
 }
 
 .header-address {
@@ -209,8 +222,17 @@ body {
     flex-wrap: wrap;
     flex-direction: row;
     gap: 12px;
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .address-list {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 40px;
     margin: 0 auto;
-    padding-left: 122px;
   }
 }
 
@@ -221,8 +243,7 @@ body {
 @media screen and (min-width: 768px) {
   .header-address-link {
     display: flex;
-    width: 119px;
-    height: 14px;
+
     flex-direction: column;
     flex-shrink: 0;
     color: var(--slate, #434455);
@@ -232,6 +253,21 @@ body {
     font-weight: 400;
     line-height: 14px;
     letter-spacing: 0.48px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .header-address-link {
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    color: var(--slate, #434455);
+    font-size: 16px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.32px;
   }
 }
 
@@ -391,13 +427,69 @@ body {
       var(--hero-background),
       var(--hero-background)
     ),
-    url(../images/hero_people_office.jpg);
+    url(../images/mobil/heromobile1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   max-width: 1440px;
-  height: 432px;
+  padding-top: 112px;
+  padding-bottom: 112px;
   width: 100%;
+}
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .main-hero {
+    background-image: linear-gradient(
+        var(--hero-background),
+        var(--hero-background)
+      ),
+      url(../images/mobil/heromobile2x.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .main-hero {
+    background-image: linear-gradient(
+        var(--hero-background),
+        var(--hero-background)
+      ),
+      url(../images/mobil/herotab1x.jpg);
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .main-hero {
+      background-image: linear-gradient(
+          var(--hero-background),
+          var(--hero-background)
+        ),
+        url(../images/mobil/herotab2x.jpg);
+    }
+  }
+}
+@media screen and (min-width: 1158px) {
+  .main-hero {
+    background-image: linear-gradient(
+        var(--hero-background),
+        var(--hero-background)
+      ),
+      url(../images/mobil/herodesk1x.jpg);
+    max-width: 1440px;
+    padding: 188px 0;
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .main-hero {
+      background-image: linear-gradient(
+          var(--hero-background),
+          var(--hero-background)
+        ),
+        url(../images/mobil/heromobile2x.jpg);
+    }
+  }
 }
 
 .main-headline {
@@ -407,9 +499,9 @@ body {
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
-  padding-left: 54px;
-  padding-top: 112px;
-  padding-bottom: 72px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 320px;
 }
 
 @media screen and (min-width: 768px) {
@@ -423,11 +515,9 @@ body {
     line-height: 60px;
     letter-spacing: 1.12px;
     display: flex;
-    width: 100%;
-    flex-direction: column;
+
+    max-width: 496px;
     flex-shrink: 0;
-    padding-right: 136px;
-    padding-top: 112px;
   }
 }
 
@@ -444,7 +534,9 @@ body {
   padding: 16px 32px;
   min-width: 169px;
   height: 56px;
-  margin: 0 auto;
+  margin-top: 48px;
+  margin-left: auto;
+  margin-right: auto;
   border: none;
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -496,7 +588,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 8px;
+  gap: 72px;
 }
 
 @media screen and (min-width: 768px) {
@@ -583,6 +675,42 @@ body {
   margin-bottom: 8px;
 }
 
+@media screen and (min-width: 768px) {
+  .main-name {
+    display: flex;
+    flex-direction: column;
+    align-self: stretch;
+    color: var(--navyblue);
+    text-align: left;
+    font-size: 36px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+    margin-bottom: 8px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .main-name {
+    display: flex;
+    flex-direction: column;
+    align-self: stretch;
+    color: var(--navyblue);
+    text-align: left;
+    font-size: 36px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+    margin-bottom: 8px;
+  }
+}
+
 .main-text {
   display: flex;
   flex-direction: column;
@@ -591,7 +719,6 @@ body {
   font-size: 16px;
   font-family: Roboto;
   font-style: normal;
-  font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.32px;
 }
@@ -643,14 +770,19 @@ body {
   background: var(--light);
   padding-top: 96px;
   padding-bottom: 96px;
-  padding-left: 82px;
-  padding-right: 82px;
 }
 
-@media screen and (min-width: 1158px) {
-  .section-our_team {
-    padding-left: 0px;
-    padding-right: 0px;
+.container-team {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 296px;
+}
+
+@media screen and (min-width: 768px) {
+  .container-team {
+    margin-left: 0;
+    margin-right: 0;
+    max-width: 100%;
   }
 }
 
@@ -670,6 +802,7 @@ body {
   flex-direction: column;
   align-items: flex-start;
   gap: 72px;
+  justify-content: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -678,6 +811,7 @@ body {
     flex-wrap: wrap;
     flex-direction: row;
     gap: 64px 24px;
+    justify-content: center;
   }
 }
 
@@ -687,6 +821,7 @@ body {
     flex-wrap: wrap;
     flex-direction: row;
     gap: 24px;
+    justify-content: center;
   }
 }
 
@@ -699,14 +834,8 @@ body {
 }
 
 .our_team_soc {
-  margin-top: 32px;
-  margin-bottom: 32px;
-}
-
-@media screen and (min-width: 1158px) {
-  .our_team_soc {
-    padding: 32px 0;
-  }
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .our_team_name {
@@ -829,7 +958,7 @@ body {
 .customer-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 16px;
+  gap: 72px 16px;
   justify-content: center;
 }
 
@@ -900,11 +1029,7 @@ body {
   color: var(--subtle-text);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@media screen and (min-width: 1158px) {
-  .main-headline {
-  }
+  border-color: #8e8f99;
 }
 
 .list-img-customersa:hover {
@@ -915,12 +1040,6 @@ body {
 .list-img-customersa:focus {
   border-color: #404bbf;
   color: #404bbf;
-}
-
-@media screen and (min-width: 1158px) {
-  .icon_customer {
-    fill: currentColor;
-  }
 }
 
 /**
@@ -983,13 +1102,13 @@ body {
   .footer-container {
     display: flex;
     align-items: auto;
+    gap: unset;
   }
 }
 
 .footer-div {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .logo {
@@ -1000,19 +1119,21 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
   .logo {
-    margin-right: 120px;
+    margin-bottom: 16px;
+    text-align: left;
     padding-top: 0;
   }
 }
 
 @media screen and (min-width: 1158px) {
   .logo {
-    margin-right: 76px;
-    padding-bottom: 16px;
+    margin-right: 0;
+    padding-bottom: 0;
   }
 }
 
@@ -1027,8 +1148,24 @@ body {
   letter-spacing: 0.02em;
   color: var(--light);
   max-width: 264px;
-  padding-top: 16px;
-  padding-bottom: 72px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 72px;
+  margin-top: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-text {
+    text-align: left;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--light);
+    max-width: 264px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+  }
 }
 
 .icon_list_footer {
@@ -1039,6 +1176,7 @@ body {
   .icon_list_footer {
     box-sizing: border-box;
     margin-left: 120px;
+    margin-right: 80px;
   }
 }
 
@@ -1048,18 +1186,34 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
+  font-weight: 500;
   letter-spacing: 0.02em;
   color: #ffffff;
-  padding-bottom: 16px;
   text-align: center;
+  margin-bottom: 16px;
+}
+
+@media screen and (min-width: 1158px) {
+  .icon_list_text {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    text-align: left;
+    margin-bottom: 16px;
+  }
 }
 
 .icon_lists {
-  padding-bottom: 72px;
   list-style: none;
   display: flex;
   gap: 16px;
   justify-content: center;
+  margin-bottom: 72px;
 }
 
 .icon_li_footer {
@@ -1092,13 +1246,13 @@ body {
 }
 
 .footer-subscribe-p {
-  padding-bottom: 16px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffff;
   text-align: center;
+  padding-bottom: 16px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1112,7 +1266,7 @@ body {
   gap: 24px;
   align-items: center;
   flex-direction: column;
-  position: relative;
+
   align-items: center;
 }
 
@@ -1125,7 +1279,7 @@ body {
 }
 
 .footer-label {
-  width: 398px;
+  width: 100%;
 }
 
 @media screen and (min-width: 768px) {
@@ -1150,7 +1304,7 @@ body {
 
 @media screen and (min-width: 768px) {
   .footer-input {
-    width: 264px;
+    width: 100%;
     height: 40px;
     border: 1px solid #ffffff;
     background-color: transparent;
@@ -1197,7 +1351,7 @@ body {
   background-color: #4d5ae5;
   border: none;
   border-radius: 4px;
-  margin-top: 16px;
+
   display: inline-flex;
   padding: 8px 24px;
   justify-content: center;
@@ -1238,7 +1392,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 408px;
+  width: 100%;
   min-height: 584px;
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
