--- a/css/styles.css
+++ b/css/styles.css
@@ -345,7 +345,7 @@ body {
   line-height: 40px;
   letter-spacing: 0.72px;
   text-transform: capitalize;
-  color: var(--navyblue, #2e2f42);
+  color: #2e2f42;
 }
 
 .mobile-link:hover {
@@ -1040,6 +1040,10 @@ body {
 .list-img-customersa:focus {
   border-color: #404bbf;
   color: #404bbf;
+}
+
+.icon_customer {
+  fill: currentColor;
 }
 
 /**
